[gd_scene load_steps=6 format=3 uid="uid://b1nfkv5ddybwa"]

[ext_resource type="Script" path="res://Particles/confetti.gd" id="1_2q5eg"]
[ext_resource type="Material" uid="uid://bc5kumsnitw1y" path="res://Particles/confetti/confettiRed.tres" id="1_m7n5r"]
[ext_resource type="Material" uid="uid://c1n4ajeutwx1r" path="res://Particles/confetti/confettiGreen.tres" id="2_81340"]
[ext_resource type="Material" uid="uid://cfkn0w0k47ykf" path="res://Particles/confetti/confettiBlue.tres" id="3_ilqfw"]
[ext_resource type="AudioStream" uid="uid://dd8tux4rbaoau" path="res://sounds/confetti.ogg" id="5_2kpht"]

[node name="Confetti" type="Node2D"]
script = ExtResource("1_2q5eg")

[node name="ConfettiRed" type="GPUParticles2D" parent="."]
scale = Vector2(0.1, 0.1)
emitting = false
amount = 20
process_material = ExtResource("1_m7n5r")
lifetime = 5.0
one_shot = true
speed_scale = 4.0

[node name="ConfettiGreen" type="GPUParticles2D" parent="."]
scale = Vector2(0.1, 0.1)
emitting = false
amount = 20
process_material = ExtResource("2_81340")
lifetime = 5.0
one_shot = true
speed_scale = 4.0

[node name="ConfettiBlue" type="GPUParticles2D" parent="."]
scale = Vector2(0.1, 0.1)
emitting = false
amount = 20
process_material = ExtResource("3_ilqfw")
lifetime = 5.0
one_shot = true
speed_scale = 4.0

[node name="confettiAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2kpht")
